--- a/header.html
+++ b/header.html
@@ -1,18 +1,15 @@
 <header id="header">
-    <div id="separation">
-    </div>
+    <!-- <div id="separation">
+    </div> -->
     <div id="main_name">
-        <p>Timothée</p>
-        <p>Proix</p>
+        <p><a href="./index.php">Timothée Proix</a></p>
     </div>
     <div id="main_menu">
         <ul>
             <li><a href="./index.php">Home</a></li>
-            <li><a href="./about.php">About</a></li>
+            <li><a href="./research.php">Research</a></li>
             <li><a href="./publications.php">Publications</a></li>
-            <li><a href="./people.php">People</a></li>
             <li><a href="./funding.php">Funding</a></li>
-            <li><a href="./teaching.php">Teaching</a></li>
             <li><a href="./contact.php">Contact</a></li>
         </ul>
     </div>
