--- a/header.html
+++ b/header.html
@@ -1,10 +1,10 @@
 <header id="header">
     <!-- <div id="separation">
     </div> -->
-    <div id="main_name">
+    <div id="main_name" class="firstRight">
         <p><a href="./index.php">Timothée Proix</a></p>
     </div>
-    <div id="main_menu">
+    <div id="main_menu" class="firstLeft">
         <ul>
             <li><a href="./index.php">Home</a></li>
             <li><a href="./research.php">Research</a></li>
