clean css and media queries for mobile

--- a/header.html
+++ b/header.html
@@ -1,8 +1,11 @@
 <header id="header">
-    <!-- <div id="separation">
-    </div> -->
-    <div id="main_name" class="firstRight">
-        <p><a href="./index.php">Timothée Proix</a></p>
+    <div id="mobile_menu">
+        <div id="display_menu">
+            <img id="img_menu" src="./static/img/menu.png">
+        </div>
+        <div id="main_name" class="firstRight">
+            <p><a href="./index.php">Timothée Proix</a></p>
+        </div>
     </div>
     <div id="main_menu" class="firstLeft">
         <ul>
